--- a/AdvancedSubwayRoutePlanning/Properties/Resources.resx
+++ b/AdvancedSubwayRoutePlanning/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="StartStation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StartStation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TransferStation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TransferStation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
